<resources>
    <string name="app_name">AdivinaElNumero</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="adivina_el_numero">Adivina el numero</string>
    <string name="intentos_restantes_3">Intentos restantes: 3</string>
    <string name="reset">Reset</string>
</resources>